# mvp-materiais-chips-quanticos

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.agent/: budget_limits.example.json  release_rules.yaml  usage_ledger.example.jsonl  usage_ledger.schema.json  workflow_state.example.json  workflow_state.schema.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: hipoteses_e_limitacoes.md  parameters.md  parameters_v0.3.5_curated_candidates.md  parameters_v0.3_candidates.md  parameters_v0.4_candidates.md  plano_tecnico_mvp.md  referencias.md  relatorio_30_dias.md  relatorio_v0.2.md  relatorio_v0.3.md
notebooks/: README.md  v0.2_demo.py
scripts/: generate_all_results.py  run_c1_literature_scale_benchmark.py  run_c1_surface_charge_demo.py  run_c2_charge_mapping_demo.py  run_c3_projection_demo.py  run_convergence.py  run_defect_2d.py  run_diffusion_1d.py  run_poisson_bridge.py  run_sensitivity.py  run_thermal_1d.py  run_thermal_2d.py
tests/: test_c1_literature_scale_benchmark.py  test_c1_surface_charge_demo.py  test_c2_charge_mapping.py  test_c2_charge_mapping_demo.py  test_c3_projection_demo.py  test_c3_solver_projection.py  test_convergence.py  test_defect_kinetics.py  test_defect_metrics.py  test_defect_solver_2d.py  test_defect_stability.py  test_diffusion_solver.py  test_dit_profile_library.py  test_domain.py  test_domain_2d.py  test_effective_charge.py  test_energy_profiles.py  test_metrics.py  test_one_way_poisson_coupling_red.py  test_plots.py  test_poisson_solver_2d.py  test_quality_gates.py  (+10 more)
(+326 files in other folders)
